5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1716_2495.log
== TEST (2019-05-07 17:33:02) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (CONDIÇÃO DO LAÇO):
	# Verifica se valor eh divisivel por 2
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    while (CONDIÇÃO DO LAÇO):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:34:49) 
-- CODE:
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num >= 0):
	# Verifica se valor eh divisivel por 2
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 6
    if (CONDIÇÃO DE PARIDADE):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:37:28) 
-- CODE:
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num > 0):
	# Verifica se valor eh divisivel por 2
	if (num % 2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 6
    if (CONDIÇÃO DE PARIDADE):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:37:53) 
-- CODE:
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num >= 0):
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:38:10) 
-- CODE:
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num >= 0):
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	

-- OUTPUT:
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:39:50) 
-- CODE:
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num >= 0):
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	

-- OUTPUT:
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:40:44) 
-- CODE:
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num >= 0):
	# Verifica se valor eh divisivel por 2
	if (num % 2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
IMPAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:41:20) 
-- CODE:
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num >= 0):
	# Verifica se valor eh divisivel por 2
	if (num % 2):
		mensagem = "IMPAR"
	else:
		mensagem = "PAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:41:32) 
-- CODE:
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num >= 0):
	# Verifica se valor eh divisivel por 2
	if (num % 2):
		mensagem = "IMPAR"
	else:
		mensagem = "PAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.349185
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
PAR
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 15:58:55) 
-- CODE:
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num >= 0):
	# Verifica se valor eh divisivel por 2
	if (num % 2):
		mensagem = "IMPAR"
	else:
		mensagem = "PAR"
	
	print(mensagem)
	
	
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:20:27) 
-- CODE:
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num >= 0):
	# Verifica se valor eh divisivel por 2
	if (num % 2):
		mensagem = "IMPAR"
	else:
		mensagem = "PAR"
	
	print(mensagem)
	
	
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.153359
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
PAR
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:51:29) 
-- CODE:
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num >= 0):
	# Verifica se valor eh divisivel por 2
	if (num % 2):
		mensagem = "IMPAR"
	else:
		mensagem = "PAR"
	
	print(mensagem)
	
	
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:51:45) 
-- CODE:
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num >= 0):
	# Verifica se valor eh divisivel por 2
	if (num % 2):
		mensagem = "IMPAR"
	else:
		mensagem = "PAR"
	
	print(mensagem)
	
	
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.226933
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
PAR
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
